Decreased tag font size by 1 px to stop one-letter overflowing

--- a/src/Card.css
+++ b/src/Card.css
@@ -246,7 +246,7 @@ overflow-y: scroll;
   height: 28px;
   width: 45px;
   place-content: center;
-  font-size:  10px;
+  font-size:  9px;
   position: relative;
   text-align: center;
   border: 1px solid #ccc;
@@ -265,7 +265,7 @@ overflow-y: scroll;
   height: 22px;
   width: 38px;
   place-content: center;
-  font-size:  9px;
+  font-size:  8px;
   position: relative;
   text-align: center;
   border: 1px solid #ccc;
